# drone

./: .clang-format  .gitignore  CMakeLists.txt  drone-client.sln  main.cpp  package.json  readme.md
client/: client.vcxproj  client.vcxproj.filters  main.cpp  network.cpp  utility.cpp  utility.h
client/headers/: client.h  includes.h  network.h  packet.h  socket.h  utility.h
client/src/: client.cpp  main.cpp  socket.cpp  utility.cpp
server/: main.cpp  utility.h
server/src/: index.html  package-lock.json  package.json
server/src/scripts/: script.js  server.js
server/src/styles/: style.css
shared/: includes.hpp
